--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "1.0.0",
   "description": "Rest API starter with Express, Mysql, JWT Authentication and Swagger Docs",
   "main": "index.js",
+  "private": true,
   "scripts": {
-    "start": "PORT=4200 node server.js",
-    "dev": "NODE_ENV=test PORT=4205 nodemon server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/98oktay/express-rest-api-starter.git"
+    "dev": "nodemon ./index",
+    "start": "node ./index.js"
   },
   "keywords": [],
   "author": "98oktay@gmail.com",
@@ -19,13 +16,27 @@
   },
   "homepage": "https://github.com/98oktay/express-rest-api-starter#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-rate-limit": "^4.0.2",
-    "helmet": "^3.18.0",
-    "mysql": "^2.17.1",
+    "await-to-js": "^2.0.1",
+    "bcrypt": "^1.0.3",
+    "bcrypt-promise": "^2.0.0",
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
+    "debug": "~2.6.9",
+    "dotenv": "^4.0.0",
+    "express": "~4.15.5",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.0",
+    "mysql2": "^1.5.1",
+    "parse-error": "^0.2.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.0",
+    "sequelize": "^4.31.2",
+    "sequelize-cli": "^3.0.0",
+    "serve-favicon": "~2.4.5",
     "swagger-jsdoc": "^3.2.9",
-    "swagger-ui-express": "^4.0.5"
+    "swagger-ui-express": "^4.0.5",
+    "validator": "^9.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
